ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.10
    • Affects Version/s: None
    • Component/s: None
    • None
    • Service Arch
    • Fully Compatible
    • ALL
    • v8.0
    • Programmability 2024-07-22, Programmability 2024-08-05
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Example:

      (gdb) p ((SessionCatalog)*0x316e7fb5e588)->_sessions
      $10 = Traceback (most recent call last):
        File "buildscripts/gdb/mongo_printers.py", line 623, in to_string
          absl_container_size(self.val))
        File "buildscripts/gdb/mongo_printers.py", line 532, in absl_container_size
          return val["settings_"]["value"]["compressed_tuple_"]["value"]
      gdb.error: Request for member 'value' is ambiguous in type 'absl::lts_20230802::container_internal::CompressedTuple<absl::lts_20230802::container_internal::CommonFields, mongo::HashImprover<mongo::LogicalSessionIdHash, mongo::LogicalSessionId>, std::equal_to<mongo::LogicalSessionId>, std::allocator<std::pair<mongo::LogicalSessionId const, std::unique_ptr<mongo::SessionCatalog::SessionRuntimeInfo, std::default_delete<mongo::SessionCatalog::SessionRuntimeInfo> > > > >'. Candidates are:
      

            Assignee:
            Alex Li
            Reporter:
            Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: