SERVER-91980 Fix Abseil pretty printers (#24971)

GitOrigin-RevId: f67d0b58f663474dcb911cdfdb0992e341326453