src/mongo/util/pretty_printer_test.py
@@ -58,6 +58,10 @@ def test_string_map():
         gdb.execute("print strMap", to_string=True),
     )
     search(r'absl::flat_hash_set.*1 elems.*\{"a"\}', gdb.execute("print strSet", to_string=True))
+    # Non empty Hash, Eq, or Alloc functors should pretty print without issues.
+    search(r"absl::flat_hash_set.*0 elems", gdb.execute("print checkNonEmptyHash", to_string=True))
+    search(r"absl::flat_hash_set.*0 elems", gdb.execute("print checkNonEmptyEq", to_string=True))
+    search(r"absl::flat_hash_set.*0 elems", gdb.execute("print checkNonEmptyAlloc", to_string=True))
 
 
 if __name__ == "__main__":
